--- a/Forget Me Knot/Base.lproj/Main.storyboard
+++ b/Forget Me Knot/Base.lproj/Main.storyboard
@@ -189,10 +189,10 @@
             </objects>
             <point key="canvasLocation" x="1215" y="-662"/>
         </scene>
-        <!--View Controller-->
+        <!--Add List View Controller-->
         <scene sceneID="AcB-Fp-Al6">
             <objects>
-                <viewController id="1sx-Qn-hju" sceneMemberID="viewController">
+                <viewController id="1sx-Qn-hju" customClass="AddListViewController" customModule="Forget_Me_Knot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="RgW-yX-6pS"/>
                         <viewControllerLayoutGuide type="bottom" id="uEx-ud-9Ha"/>
@@ -248,12 +248,34 @@
                                     <constraint firstItem="qiH-vQ-tXK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="d0B-kf-2r6" secondAttribute="top" constant="12" id="yjt-6G-12W"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ina-9W-lnO">
+                                <rect key="frame" x="0.0" y="176" width="320" height="392"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" id="x9z-QX-g0C">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x9z-QX-g0C" id="9yP-n4-R6f">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="1sx-Qn-hju" id="b6w-H0-UXo"/>
+                                    <outlet property="delegate" destination="1sx-Qn-hju" id="beZ-2k-6Pz"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Ina-9W-lnO" firstAttribute="leading" secondItem="sDX-Jq-TN2" secondAttribute="leading" id="3KE-LK-LM1"/>
+                            <constraint firstItem="Ina-9W-lnO" firstAttribute="top" secondItem="d0B-kf-2r6" secondAttribute="bottom" id="BYH-7x-hdQ"/>
                             <constraint firstItem="d0B-kf-2r6" firstAttribute="top" secondItem="RgW-yX-6pS" secondAttribute="bottom" id="Gms-GG-n55"/>
                             <constraint firstAttribute="trailing" secondItem="d0B-kf-2r6" secondAttribute="trailing" id="gZg-UG-u30"/>
+                            <constraint firstItem="uEx-ud-9Ha" firstAttribute="top" secondItem="Ina-9W-lnO" secondAttribute="bottom" id="mjJ-qP-PvQ"/>
                             <constraint firstItem="d0B-kf-2r6" firstAttribute="leading" secondItem="sDX-Jq-TN2" secondAttribute="leading" id="pn1-T0-JVN"/>
+                            <constraint firstAttribute="trailing" secondItem="Ina-9W-lnO" secondAttribute="trailing" id="tt1-Wt-JKr"/>
                         </constraints>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
