--- a/Forget Me Knot/Base.lproj/Main.storyboard
+++ b/Forget Me Knot/Base.lproj/Main.storyboard
@@ -249,7 +249,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ina-9W-lnO">
-                                <rect key="frame" x="0.0" y="176" width="320" height="392"/>
+                                <rect key="frame" x="0.0" y="176" width="320" height="348"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" id="x9z-QX-g0C" customClass="ItemCell" customModule="Forget_Me_Knot" customModuleProvider="target">
@@ -267,8 +267,11 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Bn-aH-DSJ">
-                                <rect key="frame" x="0.0" y="526" width="320" height="42"/>
+                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <color key="backgroundColor" red="0.83921568627450982" green="0.40392156862745099" blue="0.80392156862745101" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="YWN-RY-8pm"/>
+                                </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal">
                                     <attributedString key="attributedTitle">
@@ -294,14 +297,17 @@
                             <constraint firstAttribute="trailing" secondItem="9Bn-aH-DSJ" secondAttribute="trailing" id="Mg1-th-6Kq"/>
                             <constraint firstItem="uEx-ud-9Ha" firstAttribute="top" secondItem="9Bn-aH-DSJ" secondAttribute="bottom" id="buT-Sg-q4P"/>
                             <constraint firstAttribute="trailing" secondItem="d0B-kf-2r6" secondAttribute="trailing" id="gZg-UG-u30"/>
-                            <constraint firstItem="uEx-ud-9Ha" firstAttribute="top" secondItem="Ina-9W-lnO" secondAttribute="bottom" id="mjJ-qP-PvQ"/>
+                            <constraint firstItem="uEx-ud-9Ha" firstAttribute="top" secondItem="Ina-9W-lnO" secondAttribute="bottom" priority="750" id="mjJ-qP-PvQ"/>
                             <constraint firstItem="d0B-kf-2r6" firstAttribute="leading" secondItem="sDX-Jq-TN2" secondAttribute="leading" id="pn1-T0-JVN"/>
                             <constraint firstAttribute="trailing" secondItem="Ina-9W-lnO" secondAttribute="trailing" id="tt1-Wt-JKr"/>
+                            <constraint firstItem="9Bn-aH-DSJ" firstAttribute="top" secondItem="Ina-9W-lnO" secondAttribute="bottom" id="vnf-zy-Nvh"/>
                         </constraints>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
-                        <outlet property="doneButton" destination="9Bn-aH-DSJ" id="a9t-BV-oyG"/>
+                        <outlet property="descriptionTextField" destination="mbw-kR-bI9" id="QTr-bh-Nl2"/>
+                        <outlet property="doneButton" destination="9Bn-aH-DSJ" id="qm1-3Q-v52"/>
+                        <outlet property="nameTextField" destination="igR-et-osI" id="HA9-R0-HHx"/>
                         <outlet property="tableView" destination="Ina-9W-lnO" id="EHJ-VB-Dal"/>
                     </connections>
                 </viewController>
